--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
     <!-- Main Container -->
     <div class="container">
-        <h1>GUTTA'S JULEBORD QUIZ</h1>
+        <h1>JULEBORD QUIZ</h1>
 
         <!-- Quiz Section -->
         <div class="quiz-container" id="quizContainer">
