--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 </div>
                 <div class="rules-text">
     <strong>Regler:</strong><br>
-    18 SPØRSMÅL MED 4 ALTERNATIVER (HVOR 1 ER RIKTIG, eller?), 15 SEKUNDER PER SPØRSMÅL!<br>
+    18 SPØRSMÅL MED 4 ALTERNATIVER HVOR 1 ER RIKTIG, eller?, 15 SEKUNDER PER SPØRSMÅL!<br>
     200 poeng per RIKTIG, -50 poeng per FEIL<br>
     30 poeng/sekund til overs
 </div>
